Refactored syntax operations into seperate compilation unit & namespace, moved editConfig into base include

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(editor STATIC row.cpp)
+add_library(editor STATIC row.cpp syntax.cpp)
 target_include_directories(editor PUBLIC .)
 
 add_executable(kilo main.cpp)
