Refactoring into seperate edit & tui compilation units

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_library(editor STATIC row.cpp syntax.cpp)
+add_library(editor STATIC edit.cpp row.cpp syntax.cpp)
 target_include_directories(editor PUBLIC .)
 
-add_executable(kilo main.cpp)
+add_executable(kilo main.cpp tui.cpp)
 target_link_libraries(kilo PRIVATE editor)
